Changelog
=========

4.0.4 - unreleased
------------------

- translate_item form works when content has no 'default' fieldset.
  [thomasdesvenain]

- Declare plone.app.iterate dependency.
  [thomasdesvenain]

4.0.3 - 2011-05-27
------------------

- Changed string exceptions to ValueErrors in `translate_edit.cpy`.
  [robert]

- Fix the tests to work with GenericSetup 1.6.3+.
  [hannosch]

- Explicitly load the CMF permissions before using them in a `configure.zcml`.
  [hannosch]

4.0.2 - 2011-01-26
------------------

- Force the user to select a language before attempting to translate
  neutral content items. One content item can be either neutral or have
  translations, but not a mix of the two.
  [witsch]

- Don't create an extra folder when translating the default page of a
  language-neutral folder.
  [witsch]

4.0.1 - 2011-01-10
------------------

- Changed defaultLanguage behavior in I18NBaseObject to always report the
  parent's folder language even if it is neutral.
  [ggozad]

4.0 - 2010-11-25
----------------

- Fixed possible XSS security issue in the `translationbrowser_popup` caused
  by displaying unfiltered content from the `Description` string field as HTML.
  Issue reported by Andrew Nicholson.
  [hannosch]

- Protect against accidentally acquiring the `getTranslations` method from a
  parent object in `utils.generatedMutator`. Thanks to Matous Hora for the
  patch. This closes http://plone.org/products/linguaplone/issues/257.
  [hannosch]

4.0b1 - 2010-11-04
------------------

- Gracefully deal with multiple brains per `UID` in `translated_references`.
  [hannosch]

4.0a4 - 2010-10-06
------------------

- Avoid module global imports in our top-level ``__init__``. If you have
  accidentally imported any of the contents of the ``public`` module directly
  from ``Products.LinguaPlone``, you will need to adjust those to import from
  the ``public`` module instead. This closes
  http://plone.org/products/linguaplone/issues/253.