@@ -328,10 +328,8 @@ class TestLanguageSelectorWithMixedTree(LinguaPloneTestCase):
         suben.setLanguage('en')
         self.endoc = makeContent(suben, 'SimpleType', 'endoc')
         self.endoc.setLanguage('en')
-        de = makeTranslation(en, 'de')
-        de.setLanguage('de')
-        self.dedoc = makeContent(suben, 'SimpleType', 'dedoc')
-        self.dedoc.setLanguage('de')
+        makeTranslation(en, 'de')
+        self.dedoc = makeTranslation(self.endoc, 'de')
         neutral = makeContent(en, 'Folder', 'neutral')
         neutral.setLanguage('')
         self.doc = makeContent(neutral, 'SimpleType', 'doc')
@@ -346,7 +344,7 @@ class TestLanguageSelectorWithMixedTree(LinguaPloneTestCase):
         self.assertEqual(languages[u'en']['url'],
             'http://nohost/plone/en/sub-en/endoc?set_language=en')
         self.assertEqual(languages[u'de']['url'],
-            'http://nohost/plone/en-de?set_language=de')
+            'http://nohost/plone/en/sub-en/endoc-de?set_language=de')
         self.assertEqual(languages[u'no']['url'],
             'http://nohost/plone?set_language=no')
 
@@ -360,9 +358,9 @@ class TestLanguageSelectorWithMixedTree(LinguaPloneTestCase):
         self.assertEqual(languages[u'en']['url'],
             'http://nohost/plone/en/sub-en/endoc/@@sharing?set_language=en')
         self.assertEqual(languages[u'de']['url'],
-            'http://nohost/plone/en-de/@@sharing?set_language=de')
+            'http://nohost/plone/en/sub-en/endoc-de/@@sharing?set_language=de')
         self.assertEqual(languages[u'no']['url'],
-            'http://nohost/plone/@@sharing?set_language=no')
+            'http://nohost/plone?set_language=no')
 
     def test_selector_on_neutral_document(self):
         request = self.app.REQUEST
